--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="framework/jdatepicker-1.3.2.jar"/>
+	<classpathentry kind="lib" path="framework/commons-codec-1.9.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
